Add basic structure for portfolio webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Madhumitha Portfolio</h1>
+    <p>Welcome to my portfolio</p>
+</body>
+</html>
 
